--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="guri.br.selfiestudio.SplashActivity">
+    tools:context="guri.br.selfiestudio.SplashActivity"
+    android:gravity="center">
 
     <ImageView
         android:layout_width="90dp"
@@ -13,6 +14,12 @@
         android:id="@+id/imageView2"
         android:src="@drawable/blue_camera_icon_white"
         android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/selfie_studio_name"
+        android:layout_below="@+id/imageView2"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
