--- a/app/src/main/res/layout/activity_controle.xml
+++ b/app/src/main/res/layout/activity_controle.xml
@@ -32,7 +32,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/button_layout">
+        android:id="@+id/controle_button_layout">
 
         <Button
             android:id="@+id/tirar_foto"
