--- a/app/src/main/res/layout/control.xml
+++ b/app/src/main/res/layout/control.xml
@@ -4,12 +4,12 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:gravity="right"
-    >
+    android:id="@+id/camera_layout">
 
     <Button
         android:id="@+id/takepicture"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_gravity="right"
         style="?android:attr/borderlessButtonStyle"
         android:background="@drawable/take_picture_button_custom"
