--- a/app/src/main/res/layout/activity_controle.xml
+++ b/app/src/main/res/layout/activity_controle.xml
@@ -2,28 +2,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#444444"
+    android:background="#152f40"
     android:id="@+id/controle_layout">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:gravity="center"
-        android:layout_gravity="top"
-        android:id="@+id/imageLayout"
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="270dp"
+        android:layout_height="211dp"
+        android:src="@drawable/image"
         android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_centerHorizontal="true" />
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="270dp"
-            android:layout_height="211dp"
-            android:src="@drawable/image"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
-
-    </LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/pelicula"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
